# sto

./: .gitignore  docker-compose.yaml  docker-swarm.yml  nginx.conf  pyproject.toml
.github/workflows/: docker-image.yml
backend/: .env.example  .gitignore  Dockerfile  db_backup.sql  main.py  poll_info.py  pyproject.toml  test.md
backend/src/: routes.py
backend/src/core/: config.py  redis_initializer.py  schemas.py
backend/src/database/: __init__.py  models.py
backend/src/database/models/: buyers.py  cars.py  shared.py  shops.py
backend/src/modules/buyers/: depends.py  routes.py  schemas.py
backend/src/modules/cars/: routes.py  schemas.py
backend/src/modules/reg_module/: depends.py  routes.py  schemas.py  utils.py
backend/src/modules/registration/: readme.md
backend/src/modules/shops/: routes.py
backend/src/repositories/: __init__.py  repositories.py
backend/tests/: buyers.py  cars.py  hard_test.py  reg_modules.py  shops.py  test_buyers.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx  setupTests.js
frontend/src/api/: Auth.js
frontend/src/components/: AppRouter.jsx  Less30Table.jsx  Navbar.jsx  TabsSection.jsx
frontend/src/pages/: AddBuyerForm.jsx  AddCarForm.jsx  Auth.jsx  BuyerList.jsx  CarList.jsx  CarList.test.jsx  DealerList.jsx  HomePage.jsx  NoPermission.jsx  NotFound404.jsx  QueriesPage.jsx
frontend/src/routes/: index.js
frontend/src/shared/: api.js
microservice1/: Dockerfile  main.py  pyproject.toml
microservice2/: Dockerfile  main.py  pyproject.toml
(+5 files in other folders)
