[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "cffi==1.17.1",
    "click==8.1.8",
    "cryptography==44.0.1",
    "h11==0.14.0",
    "idna==3.10",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
    "aiohttp>=3.12.9",
]
